@@ -1,3 +1,10 @@
+2013-10-07 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/modificar_agente.php: fixed the align of bottom
+	create buttom.
+	
+	Fixes: #2392
+
 2013-10-07  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/functions_networkmap.php,
